# rstd

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  clang-segfault.cpp  clang-segfault.sh  doxygen.conf  manage.py  self_test.sh  test-mingw.sh  test.sh
.github/workflows/: test.yml
core/: CMakeLists.txt
core/container/: union.cpp
core/src/: option.hpp  panic.hpp
core/src/collections/: vec_deque.hpp
core/src/fmt/: display.hpp  format.hpp
core/src/io/: error.hpp  print.hpp
core/src/mem/: maybe_uninit.hpp
core/src/misc/: overloaded.hpp
core/src/num/: convert.hpp  misc.hpp
core/src/num/tests/: convert.cpp
rstd/src/: rtest.hpp
rstd/src/rcore/: io.cpp  types.hpp
rstd/src/rstd/: box.hpp  container.hpp  functions.hpp  string.hpp  variant.cpp  variant.hpp
rstd/src/rstd/iter/: container.cpp  container.hpp  iter_decl.hpp  iter_trait.hpp  iterator.cpp  range.hpp
rstd/src/rtest/: main.hpp  test.cpp
src/: ansi_color.hpp  lazy_static.cpp  lazy_static.hpp  rtest.hpp  self_test.cpp
src/core/: assert.cpp  assert.hpp  format.cpp  format.hpp  io.cpp  io.hpp  lazy_static.hpp  log.hpp  once.hpp  option.cpp  option.hpp  panic.cpp  panic.hpp  prelude.hpp  result.cpp  result.hpp  testing.hpp  testing_main.hpp  thread.cpp  thread.hpp  traits.cpp  traits.hpp  tuple.cpp  tuple.hpp  union.cpp  union.hpp  variant.cpp  variant.hpp
src/core/_impl/: panic.cpp  panic.hpp
src/core/base/: box.hpp  format.hpp  option.cpp  option.hpp  panic.hpp  rc.hpp  traits.cpp  tuple.hpp  union.hpp  variant.hpp
src/core/collections/: slice.hpp  vec_deque.hxx
src/core/container/: base.cpp  tuple.cpp  union.cpp  variant.cpp
src/core/fmt/: format.cpp
src/core/io/: log.hpp  stream.cpp  stream.hpp
src/core/misc/: downcast.hpp  lazy_static.hpp
src/core/sync/: mutex.hpp
src/core/test/: main.hpp  test.hpp
src/rcore/: assert.hpp  io.hpp  once.hpp  ops.hpp  option.hpp  panic.cpp  panic.hpp  prelude.hpp  result.hpp  self_test.cpp  test.cpp  thread.cpp  thread.hpp  types.hpp
src/rcore/fmt/: arguments.hpp  display.hpp  format.hpp  formatter.hpp
src/rcore/mem/: lazy_static.hpp  maybe_uninit.hpp
src/rcore/sync/: lazy_static.hpp  once.hpp
src/rstd/: assert.cpp  assert.hpp  box.cpp  box.hpp  container.hpp  core.hpp  format.cpp  format.hpp  functions.cpp  functions.hpp  hash.hpp  io.cpp  io.hpp  iterator.cpp  iterator.hpp  macros.hpp  mutex.cpp  mutex.hpp  option.cpp  option.hpp  panic.cpp  panic.hpp  prelude.hpp  rc.hpp  result.cpp  result.hpp  self_test.cpp  templates.cpp  templates.hpp  test.cpp  thread.cpp  thread.hpp  traits.cpp  traits.hpp  tuple.cpp  tuple.hpp  tuple2.cpp  tuple2.hpp  union.cpp  union.hpp  (+4 more)
src/rstd/fmt/: display.hpp  format.hpp  formatter.hpp  tests.cpp
src/rstd/io/: ansi_color.hpp  error.hpp  stream.cpp  stream.hpp
src/rstd/iter/: container.cpp  container.hpp  iter_decl.hpp  iter_def.hpp  iter_trait.hpp  iterator.cpp  iterator.hpp  mod.hpp  range.cpp
src/rstd/sync/: mutex.hpp
src/rstd/thread/: builder.hpp  handle.cpp  handle.hpp  local.hpp  thread.cpp  thread.hpp
src/rtest/: main.hpp  test.cpp  test.hpp
test/: CMakeLists.txt
